--- a/content/featurettes/green-atlas-earth.yaml
+++ b/content/featurettes/green-atlas-earth.yaml
@@ -67,8 +67,8 @@ more:
     link: 2020
   - featurette:
     button: Read more →
-    topic: Progressive products and tailored solutions
-    description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..."'
+    topic: Transforming a German Investment Fund
+    description: Prior to that one had to go with a suitcase with half a million Euro to München. Now one can begin with €10 000 from the comfort of their home.
     image: ../assets/open.access-f.png
     link: progressive-products-and-tailored-solutions
 action:
