--- a/content/stories.yaml
+++ b/content/stories.yaml
@@ -4,4 +4,4 @@ stories:
     link: accessapp
 
 text: How we managed to build an app in the middle of the pandemic and how it will evolve after
-description: Introducing AccessApp the free, open source booking and discovery platform we built in response to COVID-19 with public safety as its primary concern
+description: Introducing Open Access the free, open source booking and discovery .app we built in response to COVID-19 with public safety as its primary concern
