--- a/content/do.yaml
+++ b/content/do.yaml
@@ -22,7 +22,7 @@ descriptionThird:  From complex banking platforms through specialised bookshops 
 templateThird: featurettes
 linkThird: progressive-products-and-tailored-solutions
 
-headerForth: Endless Quality
-descriptionForth: "Quality, defined as fitness for purpose, competitiveness and robustness, begins with the conception of the idea and accomompanies it until the very end. Thus, issues with quality can be rooted in a multitude of places: from choosing who you work with, through how you work, to how you use tools to help you manage and watch the quality, receive notifications, act and meet requirements imposed by compliance."
+headerForth: Quality
+descriptionForth: "Defined as fitness for purpose, competitiveness and robustness, quality begins with the first epiphany of the idea and accomompanies us until the very end. Thus, issues with quality can be rooted in a multitude of places: from choosing who you work with, through how you work, to how you use tools to help you manage and watch the quality, receive notifications, act and meet requirements imposed by compliance."
 templateForth: featurettes
-linkForth: endless-quality
+linkForth: quality
