--- a/content/featurettes/quality.yaml
+++ b/content/featurettes/quality.yaml
@@ -12,52 +12,80 @@ sections:
 - section:
   text:
   - "Quality is one of these categories, which we think we understand intuitively, but in fact: we don't."
-  - When T.E. Shaw founded Aux in 2013 with 2 partners the workload with his co-founders was distributed in what felt a very natural way, with all major decision making a shared event and then other work distributed in accordance to each partners natural strengths and passions.
-  - This even handed and harmonious partnering style has certainly played a great part in Aux's continuing success and we have never really needed defined C-level roles. So when T.E. Shaw saw the book Distributed Leadership and Digital Innovation, he realised "This is what we have been doing for years!" After reading he was so impressed he made it one of his missions to meet its author Caterina Maniscalco, which he eventually did in early 2020.
-  - With T.E. Shaw being based in Germany with one co-founder in Canada and the other in Bulgaria, Aux had already leaned heavily on technology make those distances feel smaller and woven remote working and collaboration solutions seamlessly into our day to day operations, we are also seeking to improve and expand our offering so are in continuous cycle of Digital Innovation.
-  - When Charlie Cox and T.E. Shaw co-founded Digytle in London in 2020 it felt only natural that they followed the same distributed route, with this time Aux itself being the third partner, adding British flavour to the Aux family and further developing their UK exposure.
+  - "Quality must be managed: systematically, end-to-end."
+  - "It begins with the people and continues with the culture and processes."
 - section:
   title:
-    title: A Seminal Book for Digital Innovators
+    title: How we can help?
     colour: "#EF233C"
 - section:
   text:
-  - So it was his passion for digital innovation and his natural interest in distributed leadership that brought T.E. Shaw to Caterina Maniscalco's book.
-  - It not only informs, instructs and inspires, but also convinces and is rich in both scientific research and real life examples of distributed leadership giving companies the edge in highly competitive spaces.
+  - Digytle has over 40 years of experience enforcing quality in digital processes and products.
+  - We will speak with you, understandyou understand your situation, if needed--help you understand it (better), and then help you improve it.
 - section:
-  quote:
-    colour: "#6E44FF"
-    bigQuotes: ../assets/big_quotes.svg
-    text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
-    smallQuotes: ../assets/small_quotes.svg
+  title:
+    title: Approach and Instruments
+    colour: "#EF233C"
 - section:
   text:
-  - Reading it, T.E. felt many direct comparisons to his journey with Aux and Digytle, reinforcing all the benefits he had found working in close partnerships with shared roles and distant locations.
-  - Thomas, maybe an example of a lesson learned from book or your experience of dist lead.
+  - Digytle approaches quality by first describing the status quo.
+  - Then we explore and agree with you upon the desired state.
+  - Then we design, propose and agree with you a roadmap.
+  - Last but not least, we build a Control Framework.
+- section:
+  title:
+    title: Control Framework
+    colour: "#EF233C"
+- section:
+  text:
+  - Digytle works with a KPMG style Control Framework.
+  - Then we explore and agree with you upon the desired state.
+  - Then we design, propose and agree with you a roadmap.
+  - Last but not least, we build a Control Framework.
 - section:
   image:
     url: ../assets/book-img.png
-    title: Solid Science
-    description: Written like a PhD, the book has the rare power to instruct and convince.
+    title: Control Framework
+    description: Contains controls, grouped in sections, descriptions of the controls and how are they to be executed, an indicator if they are proposed, required or rejected, a period of execution, a responsible person and a result.
     colour: "#EF233C"
+- section:
+  text:
+  - "Sections can be: Security, Scalability."
+  - "A control can be: \"Do all employees and freelancers have workstations with encrypted file system?\", \"Do all employees and freelancers have workstations with up-to-date anti-malware system?\""
+  - "Frequency can be: \"Daily\", \"Weekly\", etc."
+# - section:
+#   quote:
+#     colour: "#6E44FF"
+#     bigQuotes: ../assets/big_quotes.svg
+#     text: "No man will make a great leader who wants to do it all himself, or to get all the credit for doing it."
+#     smallQuotes: ../assets/small_quotes.svg
 - section:
   title:
-    title: Caterina Maniscalco
+    title: AUXTA
     colour: "#EF233C"
 - section:
   text:
-    - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice
-    - Caterina is one of our Digytle Partners, our highly specialised assemble of digital leaders and innovators as well as trusted partner organisations.
+    - Besides the Control Framework, Digytle applies the services of AUXTA.
+    - AUXTA provides peace of mind through deep functional and compliance monitoring and elegant notifications.
 - section:
-  imageWide:
-    url: ../assets/the-crew.png
-    title: Solid Science
-    description: Written like a PhD, the book has the rare power to instruct and convince.
+  title:
+    title: Engagement and Price
     colour: "#EF233C"
 - section:
   text:
-    - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice. Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice.
-    - Caterina is available as a consultant, lecturer and speaker.
+    - The initial conversation and the assessment of the potential cooperation are free.
+    - Afterwards the Digytle's hourly rate is between 75 and 35 pounds, depends on the role and the length of the engagement.
+    - The billing is monthly or milestone based, depending on the project length.
+# - section:
+#   imageWide:
+#     url: ../assets/the-crew.png
+#     title: Solid Science
+#     description: Written like a PhD, the book has the rare power to instruct and convince.
+#     colour: "#EF233C"
+# - section:
+#   text:
+#     - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice. Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice.
+#     - Caterina is available as a consultant, lecturer and speaker.
 more:
   - featurette:
     button: Read more →
@@ -71,6 +99,8 @@ more:
     description: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning.
     image: ../assets/open.access-f.png
     link: talent-scouting-and-nurseries-raspberry-pi-beowulf-cluster
+# TODO
+# The action does not seems to be possible to be turned off.
 action:
   text:
     question: Would you like to read the book?
