Price cards test

--- a/content/featurettes/quality.yaml
+++ b/content/featurettes/quality.yaml
@@ -100,21 +100,37 @@ more:
 # The action does not seems to be possible to be turned off.
 # rename here action to books
 # create action called prices
-action:
-  text:
-    question: Would you like to read the book?
-    description: Order it from one of these selected bookstores.
-    background:
-  buttons:
-  - button:
-    link: https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
-    image: ../assets/amazon.png
-  - button:
-    link: https://www.routledge.com/Distributed-Leadership-and-Digital-Innovation-The-Argument-For-Couple-Leadership/Maniscalco/p/book/9780367361488
-    image: ../assets/Routledge.png
-  - button:
-    link: https://www.waterstones.com/book/distributed-leadership-and-digital-innovation/caterina-maniscalco//9780367361488
-    image: ../assets/Waterstones.png
+prices:
+  - option:
+    name: Starter
+    description: Jump start your transformation
+    price: £150
+    text:
+      - lorem
+      - lorem
+      - lorem
+  - option:
+    name: Medium
+    description: Digytise your business
+    price: £400
+    text:
+      - lorem
+      - lorem
+      - lorem
+      - lorem
+      - lorem
+  - option:
+    name: Business
+    description: Full package
+    price: £550
+    text:
+      - lorem
+      - lorem
+      - lorem
+      - lorem
+      - lorem
+      - lorem
+      - lorem
 contact:
   text:
     heading: Do you want to work with us
